# shoggoth

./: .gitignore  Cargo.toml  LICENSE  biome.json  bun.lockb  package.json  rustfmt.toml  turbo.json
.husky/: pre-commit  pre-push
apps/@shared/core/: Cargo.toml
apps/@shared/core/src/: lib.rs  schema_macro.rs  types.rs  utils.rs
apps/@shared/styles/: main.pcss
apps/client/: components.json  next.config.mjs  package.json  postcss.config.mjs  svelte.config.js  tailwind.config.ts  tsconfig.json  turbo.json
apps/client/src/: app.html  invoke.d.ts  store.ts  tauri.d.ts  utils.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: api.rs  app_dirs.rs  commands.rs  common.rs  main.rs  prelude.rs  projects.rs  utils.rs
apps/client/src-tauri/src/projects/: commands.rs  mod.rs  tauri_commands.rs
apps/client/src-tauri/src/tools/: bellingcat_tg.rs  mod.rs  phone_infoga.rs  sherlock.rs
apps/client/src-tauri/src/tools/phone_infoga/: mod.rs  utils.rs
apps/client/src-tauri/src/tools/sherlock/: mod.rs
apps/client/src/app/: _app-init.tsx  _client-init.tsx  _project-tab.tsx  _query-client.tsx  _window-buttons.tsx  globals.css  layout.tsx  not-found.tsx
apps/client/src/components/: base-node.tsx  layout-with-sidebar.tsx  links.tsx  nav-link.tsx  toasts.tsx
apps/client/src/icons/: browsers.tsx  ddg.tsx  google.tsx  telegram.tsx  yandex.tsx
apps/client/src/lib/: utils.ts
apps/client/src/nodes/: country.tsx  index.ts  index.tsx  nickname.tsx  phone.tsx  telegram.tsx  text.tsx  url.tsx  utils.ts  utils.tsx
apps/client/src/projects/: store.ts  tauri-api.ts  utils.ts
apps/client/src/routes/: +layout.svelte  client-init.svelte
apps/client/src/tauri-api/: projects.ts
apps/client/src/tools/: store.ts  tool-section.tsx
apps/extension/: compile-worker.ts  next.config.mjs  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  turbo.json  vite.config.ts
apps/extension/src/: app.d.ts  app.html  service_worker.ts
apps/extension/src/app/: layout.tsx  page.tsx
apps/extension/src/lib/: index.ts
apps/extension/static/: manifest.json
(+115 files in other folders)
