[workspace]
resolver = "2"
members = [
  "apps/client/src-tauri",
  "apps/@shared/core"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ts-rs = { version = "10", features = ["serde-json-impl"] }
shogg_core = { path = "apps/@shared/core" }
actix-web = { version = "4", default-features = false, features = ["macros"]}
actix-cors = "0.7.0"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
strip = true
