[package]
name = "shoggoth-client"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.2", features = [] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ts-rs.workspace = true
shogg_core.workspace = true
reqwest = "0.12"
flate2 = "1"
tar = "0.4"
open = "5"
tokio = { version="1", features = ["process"] }

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
